# chart-preview

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  TODO.txt
.claude-code/: settings.json
Chart Preview/: CMakeLists.txt  ChartPreview.jucer  RBN_prev.jucer  build.sh  toolchain-mingw64.cmake
Chart Preview/.github/workflows/: build.yml
Chart Preview/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3_Manifest_Helper.plist
Chart Preview/Builds/MacOSX/ChartPreview.xcodeproj/: project.pbxproj
Chart Preview/Builds/MacOSX/ChartPreview.xcodeproj/project.xcworkspace/xcuserdata/noahbaxter.xcuserdatad/: UserInterfaceState.xcuserstate
Chart Preview/Builds/MacOSX/ChartPreview.xcodeproj/xcuserdata/noahbaxter.xcuserdatad/xcschemes/: xcschememanagement.plist
Chart Preview/Builds/VisualStudio2022/: ChartPreview_SharedCode.vcxproj  ChartPreview_SharedCode.vcxproj.filters  ChartPreview_VST3.vcxproj  ChartPreview_VST3ManifestHelper.vcxproj
Chart Preview/JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Chart Preview/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Utils.h
Chart Preview/Source/Midi/: MidiInterpreter.cpp  MidiInterpreter.h  MidiProcessor.cpp  MidiProcessor.h
Chart Preview/Source/Renderers/: AssetManager.cpp  AssetManager.h  HighwayRenderer.cpp  HighwayRenderer.h
Chart Preview/Source/Utils/: PPQ.h  Utils.h
ChartPreview/: ChartPreview.jucer  REAPER-VST2-INTEGRATION-REPORT.md  build.sh
RBN_prev/: RBN_prev.jucer
assets/: README.md
docs/: CLAUDE.md  TODO.md  (+9 more)
(+201 files in other folders)
